--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "parcel-plugin-bundle-manifest": "^0.2.0",
+    "parcel-plugin-imagemin": "^3.0.0",
     "prettier": "1.18.2",
     "sass": "^1.22.12"
   }
