--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 notifications:
   email: false
 language: node_js
@@ -6,11 +6,11 @@ cache:
   directories:
     - node_modules
 node_js:
-  - "8"
+  - "latest"
 before_script:
-  - npm i
+  - sudo $(which npm) install
 script:
-  - npm run build
+  - sudo $(which npm) run build
 after_success:
   - "curl -Lo travis_after_all.py https://git.io/travis_after_all"
   - python travis_after_all.py
