--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
-sudo: required
 notifications:
   email: false
 language: node_js
-cache:
-  directories:
-    - node_modules
 node_js:
   - "8"
+cache: npm
 before_script:
-  - sudo $(which npm) install
+  - npm i -g npm@version-number
 script:
-  - sudo $(which npm) run build
+  - npm run build
+deploy:
+  provider: surge
+  project: ./dist
+  domain: https://nbenakis.surge.sh/
+  skip-cleanup: true
+  on:
+    branch: master
 after_success:
   - "curl -Lo travis_after_all.py https://git.io/travis_after_all"
   - python travis_after_all.py
