--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: node_js
 node_js:
   - "10"
 before_install:
-  - npm install -g
+  - npm install -g npm@2
   - npm ci
 script:
   - npm run build
