--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ notifications:
 language: node_js
 node_js:
   - "10"
-before_install:
+install:
   - npm install -g npm@2
-  - npm ci
 script:
   - npm run build
 deploy:
