--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: false
 notifications:
   email: false
+branches:
+  only:
+    - master
 language: node_js
 node_js:
   - "10"
@@ -8,11 +11,4 @@ install:
   - npm install -g npm@2
   - npm install -g parcel
 script:
-  - npm run build2
-deploy:
-  provider: surge
-  project: dist
-  domain: https://nbenakis.surge.sh/
-  skip-cleanup: true
-  on:
-    branch: master
+  - travis_wait npm run build
